--- a/PROJECT_1_HEAT_DIFFUSION/实验报告模板.md
+++ b/PROJECT_1_HEAT_DIFFUSION/实验报告模板.md
@@ -1,10 +1,10 @@
 # 项目：铝棒热传导方程显式差分法数值解 - 实验报告
 
-**学生姓名：** [姓名] 
+**学生姓名：** [肖澎] 
 
-**学号：** [学号] 
+**学号：** [20231050083] 
 
-**完成日期：** [日期]
+**完成日期：** [6.11]
 
 ## 1. 实验目的
 
@@ -52,7 +52,9 @@ $$T(x,t) = \sum_{n=1,3,5,\ldots}^{\infty} \frac{4T_0}{n\pi} \sin(k_n x) e^{-k_n^
 
 ### 3.1 显式差分法数值解
 
-[展示显式差分法的温度分布随时间位置演化的3D图]
+[![image](https://github.com/user-attachments/assets/5180fe70-e84f-4592-a7ef-66a8272fe556)
+]
+
 
 ### 3.2 解析解
 **解析解公式：**
@@ -61,7 +63,9 @@ $$T(x,t)=\sum\limits_{n=1,3,\cdots}^{\infty}\frac{4T_0}{n\pi}\sin(k_nx)e^{-k_n^2
 
 其中 $k_n = n\pi/L$， $T_0=100$ K
 
-[展示解析解的温度分布随时间位置演化的3D图]
+[展示解析解的温度分布随时间位置演化的3D图![image](https://github.com/user-attachments/assets/46695ce4-e365-412a-a96c-922058cb2caa)
+]
+
 
 ### 3.3 稳定性分析
 
@@ -69,15 +73,21 @@ $$T(x,t)=\sum\limits_{n=1,3,\cdots}^{\infty}\frac{4T_0}{n\pi}\sin(k_nx)e^{-k_n^2
 
 分析不同 $r$ 值下的数值解行为，展示稳定和不稳定情况的对比
 
-[不稳定情况的温度分布的3D图]
-[稳定情况的温度分布的3D图]
+[不稳定情况的温度分布的3D图![image](https://github.com/user-attachments/assets/9cac6a3a-97d6-49a5-8d61-39e934099d89)
+]
+
+[稳定情况的温度分布的3D图![image](https://github.com/user-attachments/assets/e950aef5-959f-472d-8fe1-d716dbe48c1b)
+]
+
 
 ### 3.4 不同初始条件模拟
 
-[展示分段初始条件下的温度分布随时间位置演化的3D图]
+[展示分段初始条件下的温度分布随时间位置演化的3D图![image](https://github.com/user-attachments/assets/f7c9ec1d-e3da-4a5c-bf97-d5eefcf7b548)
+]
+
 
 ### 3.5 包含牛顿冷却定律的模拟
-[展示包含牛顿冷却定律的温度分布随时间位置演化的3D图]
+[展示包含牛顿冷却定律的温度分布随时间位置演化的3D图]![image](https://github.com/user-attachments/assets/5e70ff91-3a6f-4660-b8ad-a603715129c8
 
 ## 4. 分析与讨论
 
