--- a/PROJECT_1_HEAT_DIFFUSION/实验报告模板.md
+++ b/PROJECT_1_HEAT_DIFFUSION/实验报告模板.md
@@ -40,12 +40,36 @@ $$T(x,t) = \sum_{n=1,3,5,\ldots}^{\infty} \frac{4T_0}{n\pi} \sin(k_n x) e^{-k_n^
 
 ### 2.1 显式差分法算法思路
 
-[描述显式差分法的基本思想、离散化过程和稳定性条件]
+[显式差分法通过：
+
+离散化空间和时间
+
+用差分近似导数
+
+建立显式迭代格式
+
+在稳定性条件下推进求解
+
+特别适用于抛物型偏微分方程的数值求解，是计算科学中的基础工具。对于需要大时间步长或高精度的问题，可考虑隐式方法（如Crank-Nicolson格式）。
+
+]
 
 ### 2.2 关键代码片段
-```python
-# 显式差分法核心代码
-# 插入你认为的关键代码段
+```def basic_heat_diffusion():
+    """任务1: 基本热传导模拟"""
+
+    r = D * dt / (dx ** 2)
+    print(f"任务1 - 稳定性参数 r = {r}")
+
+    u = np.zeros((Nx, Nt))
+    u[:, 0] = 100
+    u[0, :] = 0
+    u[-1, :] = 0
+
+    for j in range(Nt - 1):
+        u[1:-1, j + 1] = (1 - 2 * r) * u[1:-1, j] + r * (u[2:, j] + u[:-2, j])
+
+    return u
 ```
 
 ## 3. 实验结果
