--- a/PROJECT_1_HEAT_DIFFUSION/实验报告模板.md
+++ b/PROJECT_1_HEAT_DIFFUSION/实验报告模板.md
@@ -115,8 +115,23 @@ $$T(x,t)=\sum\limits_{n=1,3,\cdots}^{\infty}\frac{4T_0}{n\pi}\sin(k_nx)e^{-k_n^2
 
 ## 4. 分析与讨论
 
-1. **稳定性问题：** [描述在实现显式差分法时遇到的稳定性问题]
-2. **精度问题：** [描述显示差分法精度相关的困难和改进方法]
+1. **稳定性问题：** [稳定性问题的表现
+数值解发散：当时间步长过大时，解会指数级增长，导致计算结果完全不可用
+振荡现象：即使未完全发散，也可能出现高频振荡，导致解的物理意义丧失
+计算效率低下：为满足稳定性条件，必须使用极小的时间步长，导致计算量剧增
+改进方法
+使用隐式方法：如 Crank-Nicolson 方法，无条件稳定但计算复杂度增加
+空间自适应步长：在解变化剧烈区域使用较小空间步长
+混合方法：在不稳定区域使用隐式格式，稳定区域使用显式格式]
+2. **精度问题：** [精度问题的表现
+截断误差：通常为 O (Δt, (Δx)²)，即时间方向一阶精度，空间方向二阶精度
+数值扩散：解的平滑化效应，导致边界和梯度信息丢失
+边界条件处理：边界附近精度显著降低
+改进方法
+高阶差分格式：使用中心差分或迎风差分提高空间精度
+Richardson 外推：结合不同步长的计算结果，提高精度
+自适应网格：在梯度大的区域细化网格
+时间积分改进：使用 Runge-Kutta 等高阶时间积分方法]
 
 ## 5. 思考题
 
