--- a/PROJECT_2_EARTH_CRUST_DIFFUSION/实验报告模板.md
+++ b/PROJECT_2_EARTH_CRUST_DIFFUSION/实验报告模板.md
@@ -1,10 +1,10 @@
 # 项目2：地壳热扩散数值模拟 - 实验报告
 
-**学生姓名：** [请填写]
+**学生姓名：** [杨程宇]
 
-**学号：** [请填写]
+**学号：** [20231050197]
 
-**完成日期：** [请填写]
+**完成日期：** [6.11]
 
 
 ---
@@ -59,7 +59,104 @@ $$\frac{\partial T}{\partial t} = D \frac{\partial^2 T}{\partial z^2}$$
 
 **请描述你实现的差分算法的具体形式和求解方法：**
 
-[在此描述你的数值方法实现，包括：]
+[在此描述你的数值方法实现，包括：
+### 差分算法实现细节
+
+我将以一维热传导方程为例，详细描述差分算法的具体实现形式和求解方法。
+
+### 1. 空间和时间离散化方案
+
+#### 空间离散化
+- 计算域：$x \in [0, L]$
+- 网格划分：将空间域均匀划分为 $N+1$ 个节点，节点间距为 $\Delta x = \frac{L}{N}$
+- 节点坐标：$x_i = i \Delta x$，其中 $i = 0, 1, 2, \ldots, N$
+
+#### 时间离散化
+- 时间域：$t \in [0, T]$
+- 时间步长：$\Delta t$
+- 时间节点：$t_n = n \Delta t$，其中 $n = 0, 1, 2, \ldots, M$，且 $M = \frac{T}{\Delta t}$
+
+#### 网格表示
+- $u_i^n$ 表示在空间节点 $x_i$ 和时间节点 $t_n$ 处的数值解
+
+### 2. 差分方程的具体形式
+
+#### 控制方程
+一维热传导方程：
+$$\frac{\partial u}{\partial t} = \alpha \frac{\partial^2 u}{\partial x^2}$$
+其中 $\alpha$ 是热扩散系数。
+
+#### 显式差分格式
+- 时间导数采用向前差分：$\frac{\partial u}{\partial t} \approx \frac{u_i^{n+1} - u_i^n}{\Delta t}$
+- 空间二阶导数采用中心差分：$\frac{\partial^2 u}{\partial x^2} \approx \frac{u_{i+1}^n - 2u_i^n + u_{i-1}^n}{(\Delta x)^2}$
+
+代入原方程得到显式差分方程：
+$$\frac{u_i^{n+1} - u_i^n}{\Delta t} = \alpha \frac{u_{i+1}^n - 2u_i^n + u_{i-1}^n}{(\Delta x)^2}$$
+
+整理后得到递推公式：
+$$u_i^{n+1} = r u_{i+1}^n + (1-2r) u_i^n + r u_{i-1}^n$$
+其中 $r = \frac{\alpha \Delta t}{(\Delta x)^2}$ 是稳定性参数。
+
+### 3. 边界条件的处理方法
+
+#### 第一类边界条件（Dirichlet条件）
+若边界条件为：
+$$u(0, t) = g_1(t)$$
+$$u(L, t) = g_2(t)$$
+
+在差分格式中直接赋值：
+$$u_0^n = g_1(t_n)$$
+$$u_N^n = g_2(t_n)$$
+
+#### 第二类边界条件（Neumann条件）
+若边界条件为：
+$$\frac{\partial u}{\partial x}(0, t) = h_1(t)$$
+$$\frac{\partial u}{\partial x}(L, t) = h_2(t)$$
+
+使用中心差分近似边界导数：
+- 在左边界 $x=0$：$\frac{u_1^n - u_{-1}^n}{2\Delta x} = h_1(t_n)$
+- 在右边界 $x=L$：$\frac{u_{N+1}^n - u_{N-1}^n}{2\Delta x} = h_2(t_n)$
+
+通过引入虚拟节点并结合差分方程，得到修正的边界方程。
+
+#### 第三类边界条件（Robin条件）
+若边界条件为：
+$$\frac{\partial u}{\partial x}(0, t) + \beta_1 u(0, t) = q_1(t)$$
+$$\frac{\partial u}{\partial x}(L, t) + \beta_2 u(L, t) = q_2(t)$$
+
+同样使用中心差分近似边界导数，并结合差分方程处理。
+
+### 4. 稳定性条件的考虑
+
+#### 显式格式的稳定性条件
+显式差分格式的稳定性条件为：
+$$r = \frac{\alpha \Delta t}{(\Delta x)^2} \leq \frac{1}{2}$$
+
+这意味着：
+- 时间步长 $\Delta t$ 必须满足：$\Delta t \leq \frac{(\Delta x)^2}{2\alpha}$
+- 空间步长 $\Delta x$ 越小，允许的时间步长 $\Delta t$ 就越小
+- 热扩散系数 $\alpha$ 越大，允许的时间步长 $\Delta t$ 就越小
+
+#### 稳定性条件的物理解释
+- 当 $r > 0.5$ 时，数值解会出现振荡或发散
+- 当 $r \leq 0.5$ 时，数值解是稳定的，且随时间衰减
+
+#### 实际应用中的考虑
+- 在计算前，根据空间步长 $\Delta x$ 和热扩散系数 $\alpha$ 计算允许的最大时间步长
+- 通常选择 $\Delta t$ 为允许最大值的某个比例（如0.8倍），以确保稳定性裕度
+- 对于非均匀网格，需根据最小网格间距确定时间步长
+
+### 5. 算法实现流程
+
+1. 初始化：设置计算域、网格参数、热扩散系数、初始条件和边界条件
+2. 计算稳定性参数 $r$，并确保满足稳定性条件
+3. 循环计算时间推进：
+   - 应用边界条件
+   - 对内部节点应用差分方程计算 $u_i^{n+1}$
+   - 更新时间步
+4. 输出结果或可视化
+
+这种显式差分方法的优点是实现简单，但缺点是受稳定性条件限制，时间步长必须很小，导致计算效率较低。对于需要较大时间步长的问题，可以考虑使用隐式差分方法（如Crank-Nicolson方法）。]
 - 空间和时间离散化方案
 - 差分方程的具体形式
 - 边界条件的处理方法
