--- a/PROJECT_4_HEAT_EQUATION_METHODS/实验报告.md
+++ b/PROJECT_4_HEAT_EQUATION_METHODS/实验报告.md
@@ -1,10 +1,8 @@
 # 项目：热传导方程数值解法比较 - 实验报告
 
-**学生姓名：** [姓名] 
-
-**学号：** [学号] 
-
-**完成日期：** [日期]
+**学生姓名：王珏
+**学号：20231050167
+**完成日期：2025.06.11
 
 ## 1. 实验目的
 
