--- a/PROJECT_3_QUANTUM_TUNNELING/实验报告模板.md
+++ b/PROJECT_3_QUANTUM_TUNNELING/实验报告模板.md
@@ -1,8 +1,8 @@
 # 项目3：量子隧穿效应数值模拟 - 实验报告
 
-**学生姓名：** [您的姓名]  
-**学号：** [您的学号]  
-**完成日期：** [完成日期]  
+**学生姓名：** [马海尔吉]  
+**学号：** [20231050169]  
+**完成日期：** [20250611]  
 
 ---
 
@@ -31,23 +31,25 @@ $$\varphi_{i,j+1} = \chi - \varphi_{i,j}$$
 
 ### 3.1 波包演化观察
 
-[在此插入波包演化的关键图像]
+[在此插入波包演化的关键图像]![Figure 2025-06-11 113014 (0)](https://github.com/user-attachments/assets/256b6074-72a4-4b2a-8780-ddfbe7be395d)![Figure 2025-06-11 113014 (1)](https://github.com/user-attachments/assets/09ded7da-09ab-4f17-8eec-7cb57ad5df3f)
+
+
 
 **主要现象：**
-- 初始状态：[简述高斯波包的初始状态]
-- 隧穿过程：[简述观察到的隧穿现象]
-- 最终状态：[简述透射和反射结果]
+- 初始状态：[简述高斯波包的初始状态]初始（Time step = 0 ）时，高斯波包概率密度呈单峰状集中分布于势垒（位置约 100 处，宽度 3、高度 1.0 ）左侧，波包形态清晰，概率密度峰值高，表明量子态主要局域在势垒前区域，未与势垒发生相互作用
+- 隧穿过程：[简述观察到的隧穿现象]随时间演化，波包与势垒作用：t = 75 时，波包在势垒处出现渗透，部分概率密度 “穿过” 势垒到达右侧；后续时间步（如 t = 150 ），右侧出现明显概率分布，体现量子隧穿 —— 粒子有一定概率穿越经典力学中无法逾越（能量低于势垒高度）的势垒，波包概率密度的跨势垒传播直观呈现该量子效应 。
+- 最终状态：[简述透射和反射结果]反射方面，不同时间步左侧均留存概率密度（如 t = 150、225 时左侧仍有波包特征 ），说明部分波包被势垒反射；透射上，t = 75 后右侧出现概率分布，表明存在透射波包，不过最终 t = 299 时波包又主要集中于左侧，反映透射并非持续单向，量子态演化中透射与反射动态交织，波包经相互作用后呈现复杂的概率再分布，体现量子隧穿过程的波动性与可逆性
 
 ### 3.2 数值结果
 
 | 物理量 | 数值 |
 |--------|------|
-| 透射系数 T | [填入] |
-| 反射系数 R | [填入] |
-| 概率守恒误差 | [填入] |
+| 透射系数 T | [0.21] |
+| 反射系数 R | [0.79] |
+| 概率守恒误差 | [0.02] |
 
 **结果分析：**
-[简要分析结果的物理意义]
+[简要分析结果的物理意义]通过 T、R 可定量分析量子隧穿的 “成功概率” 与 “反射代价”，理解微观粒子如何以概率方式与势垒作用；概率守恒误差验证模拟的可靠性，确保结果符合量子力学基本公理。这些量共同构建了 “量子粒子与势垒相互作用” 的清晰图像 —— 既非经典的 “全透射” 或 “全反射”，也不是无规律的随机行为，而是受波函数演化严格支配的概率过程
 
 ## 4. 问题与收获
 
@@ -62,10 +64,10 @@ $$\varphi_{i,j+1} = \chi - \varphi_{i,j}$$
 ## 5. 思考题
 
 1. **为什么使用变形的Crank-Nicolson方法？**
-   [您的回答]
+   [您的回答]使用变形的 Crank - Nicolson 方法，是为利用其无条件稳定、二阶精度优势，适配含时薛定谔方程量子态演化需求，通过调整离散格式、边界条件等，精准处理势垒耦合、波包特性，在维持概率守恒同时，高效稳定模拟量子隧穿，输出可靠物理结果
 
 2. **量子隧穿现象的物理意义是什么？**
-   [您的回答]
+   [您的回答]量子隧穿现象的物理意义是：微观粒子有一定概率穿越经典力学中能量不足以翻越的势垒，体现了量子力学中粒子的波动性，突破经典轨迹限制，是理解如 α 衰变、扫描隧道显微镜工作原理等微观过程的核心，展现量子世界概率性与非直观运动规律 
 
 ## 6. 结论
 
