--- a/PROJECT_3_QUANTUM_TUNNELING/实验报告模板.md
+++ b/PROJECT_3_QUANTUM_TUNNELING/实验报告模板.md
@@ -59,7 +59,7 @@ $$\varphi_{i,j+1} = \chi - \varphi_{i,j}$$
 
 ### 4.2 主要收获
 
-[总结对数值方法和量子现象的理解]
+[总结对数值方法和量子现象的理解]用 Crank-Nicolson 数值方法求解薛定谔方程，能稳定模拟量子隧穿中波包演化，得出透射反射系数符合概率守恒，揭示微观粒子可穿越经典势垒的波动性，为研究量子现象提供可靠计算手段，也验证了量子理论区别于经典力学的概率性本质
 
 ## 5. 思考题
 
@@ -71,5 +71,5 @@ $$\varphi_{i,j+1} = \chi - \varphi_{i,j}$$
 
 ## 6. 结论
 
-[总结实验的主要结果和意义]
+[总结实验的主要结果和意义]实验通过数值求解一维含时薛定谔方程，得出粒子穿越势垒的透射系数 T 和反射系数 R 满足 T+R≈1，波包遇势垒时部分隧穿部分反射，演化中总概率近似守恒且误差小，这验证了量子隧穿现象中粒子的概率波特性，突破经典能量限制，为理解 α 衰变、STM 等微观过程和相关技术应用提供了计算基础，也展现了 Crank-Nicolson 方法研究量子系统演化的可靠性
 
