--- a/PROJECT_3_QUANTUM_TUNNELING/实验报告模板.md
+++ b/PROJECT_3_QUANTUM_TUNNELING/实验报告模板.md
@@ -23,7 +23,14 @@ $$\varphi_{i,j+1} = \chi - \varphi_{i,j}$$
 ### 2.2 关键代码片段
 
 ```python
-# 请在此插入您认为最重要的代码片段
+# def solve_schrodinger(self):
+    A = self.build_coefficient_matrix()  # 构建系数矩阵
+    self.B[:,0] = self.wavefun(self.x)  # 初始化波函数（高斯波包）
+
+    for t in range(self.Nt-1):
+        # 核心计算步骤：解线性方程组更新波函数
+        self.C[:,t+1] = 4j * np.linalg.solve(A, self.B[:,t])
+        self.B[:,t+1] = self.C[:,t+1] - self.B[:,t]
 # 例如：矩阵构建或时间演化部分
 ```
 
