--- a/PROJECT_2_EARTH_CRUST_DIFFUSION/实验报告模板.md
+++ b/PROJECT_2_EARTH_CRUST_DIFFUSION/实验报告模板.md
@@ -59,10 +59,9 @@ $$\frac{\partial T}{\partial t} = D \frac{\partial^2 T}{\partial z^2}$$
 
 **请描述你实现的差分算法的具体形式和求解方法：**
 
-[在此描述你的数值方法实现，包括：
 ### 差分算法实现细节
 
-我将以一维热传导方程为例，详细描述差分算法的具体实现形式和求解方法。
+以一维热传导方程为例，详细描述差分算法的具体实现形式和求解方法。
 
 ### 1. 空间和时间离散化方案
 
@@ -164,9 +163,15 @@ $$r = \frac{\alpha \Delta t}{(\Delta x)^2} \leq \frac{1}{2}$$
 
 **稳定性分析：**
 
-[讨论显式格式的稳定性特点，包括：]
-- 稳定性参数 $r = \frac{hD}{a^2}$ 的值
-- 时间步长选择的限制条件
+显式差分格式用于求解一维热传导方程时，稳定性参数定义为：
+r= hD/a^2
+​其中：h是时间步长，a是空间步长，
+稳定性条件为：r ≤ 1/2，
+由此得到时间步长的限制条件：h ≤ (a^2)/2D
+时间步长 h 对稳定性影响较大，过大时会导致数值不稳定，空间步长 a 设定越小（网格越密），允许的时间步长越小，计算量增大，因此需在精度和效率之间取舍。
+影响及建议：1、数值稳定 是保证计算结果准确、收敛的前提。
+           2、显式格式简单易实现，计算量小，但时间步长限制严格，适用于问题规模不大或需快速原型验证。
+           3、若需要采用较大时间步长，可考虑隐式格式、Crank-Nicolson格式等无条件稳定方法。
 
 ---
 
@@ -175,19 +180,35 @@ $$r = \frac{\alpha \Delta t}{(\Delta x)^2} \leq \frac{1}{2}$$
 ### 4.1 数值结果
 
 **基本计算参数：**
-- 网格点数: $n_z$ =  [填写]
-- 时间步数: $n_t$ =  [填写]
-- 模拟总时间：[填写] 年
-- 稳定性参数: $r$ =  [填写]
+- 网格点数: $n_z$ =  21
+- 时间步数: $n_t$ =  366
+- 模拟总时间：10 年
+- 稳定性参数: $r$ =  0.1
+
 
 ### 4.2 图表结果：季节性温度轮廓图
 
-[在此粘贴季节性温度轮廓图图片]
+![image](https://github.com/user-attachments/assets/cc52fa80-06eb-43e0-a46b-3b35f34a1544)
+
 
 **图表分析：**
-- 描述四个季节温度轮廓的差异
+- 描述四个季节温度轮廓的差异:
+春季（约第90天）：地表温度开始回升，温度较冬季明显提升，温度曲线显示浅层温度有所回暖。
+夏季（约第180天）：地表温度达到全年最高点，浅层温度明显升高且温度峰值接近地表，温度梯度较大。
+秋季（约第270天）：地表温度开始下降，浅层温度波动减弱，温度曲线逐渐平缓。
+冬季（约第365天）：地表温度最低，浅层温度也最低，温度曲线呈现整体冷却趋势。
+不同季节表现为地表温度的周期性变化，温度轮廓随时间呈现明显的波动。
 - 分析温度振幅随深度的衰减规律
+温度振幅随着深度增加呈指数衰减趋势。
+在浅层，地表温度波动对温度影响显著，温度振幅较大。
+随着深度加深，受到地热和热扩散的影响，季节性温度波动被滤除，振幅逐渐减小，趋近于恒定温度。
+该振幅衰减符合热扩散方程的解析解特征，且衰减速率由热扩散系数D和周期性边界温度决定。
+
 - 讨论季节性影响的穿透深度
+季节性影响的穿透深度定义为温度振幅显著减弱到某一阈值的深度。
+一般该深度范围约为几米到十几米，具体数值可通过振幅减小到初始振幅的1/e（约37%）位置判断。
+超过穿透深度后，地下温度趋于稳定，季节温度变化影响微弱。
+穿透深度受热扩散速率、季节周期长度及地质条件等因素影响。
 
 ---
 
@@ -197,26 +218,146 @@ $$r = \frac{\alpha \Delta t}{(\Delta x)^2} \leq \frac{1}{2}$$
 
 **地壳热传导特征：**
 
-[分析模拟结果揭示的物理现象：]
+1、温度随时间周期性变化
+地表温度呈现明显的年周期变化，反映阳光辐射受季节影响的规律。该周期变化通过热传导扩散，传递到地下不同深度。
 
+2、温度波传播与衰减
+从地表向地下传播的温度波逐渐衰减，温度波振幅随着深度增加呈指数下降趋势。这是由热扩散过程导致能量逐步扩散和耗散的结果。
+
+3、深度温度趋于稳定
+在较深层（如20米及以下），温度基本趋近一个稳定值，不随时间显著变化，表现为热流系统的稳态特征。此处温度受地热常数和深层热源影响，季节变化影响微弱。
+
+4、相位滞后现象
+温度波向地下传播时存在相位延迟，温度波峰出现在地表之后一定时间传达到更深层。这体现了热传导的有限传播速度和时滞效应。
+
+5、边界条件的重要作用
+地表时变边界条件是季节性温度波的驱动源，固定的底部边界条件则为系统提供了稳定的热源，使整个系统达到周期稳定状态。
 
 ### 5.4 思考题
 
 **请回答以下问题：**
 
 1. **为什么深层温度的季节性变化比地表小得多？这种现象在实际地球科学中有什么应用？**
+1、热扩散的衰减效应
+地表温度的季节性变化是由太阳辐射引起的周期性热输入，在向地下传导过程中，热量通过热扩散逐渐扩散和耗散，导致温度波振幅随着深度呈指数衰减。这是热传导的基本物理规律，热波在介质中传播时能量逐渐减少，深层温度波动自然比地表小得多。
 
-   [你的回答]
+2、地热的稳定影响
+地下深层温度受到地球内部热流的稳定影响，相对恒定，因此季节性外界温度变化对其影响微弱。
+
+3、热传导的时间滞后
+热量传导到深部需要时间，导致深层温度不仅振幅减小，而且相位滞后，峰值出现时间晚于地表，进一步减弱季节性变化的显著性。
 
 3. **显式差分格式相比隐式格式有什么优势？在什么情况下可能选择隐式格式？**
+优势：
+1、实现简单，计算直观
+显式格式的时间推进是直接按照已知前一步的解计算当前时间步的解，不需要解线性方程组，代码结构清晰，实现方便。
+2、计算量较小，单步计算速度快
+每一步计算只涉及当前时刻的已知数据，无需矩阵求解，计算效率高，特别适合小规模或快速验证的模拟。
+3、方便并行计算
+由于只依赖先前时间层，分块计算及并行化实现较容易。
 
-   [你的回答]
-
+在：
+稳定性要求较高，网格划分较细或时间步长受限制，或者需要高精度和稳定性的工程应用时，可能选择隐式格式
 ---
 
 ## 6. 核心代码片段（可选）
 
 ```python
-# 在此粘贴你实现的核心求解算法
+#!/usr/bin/env python3
+# -*- coding: utf-8 -*-
+"""
+地壳热扩散数值模拟 - 参考答案
+
+使用显式差分格式求解一维热传导方程：
+∂T/∂t = D * ∂²T/∂z²
+
+边界条件:
+- 地表 (z=0): T = A + B*sin(2πt/τ)
+- 深度20m: T = 11°C
+
+"""
+
+import numpy as np
+import matplotlib.pyplot as plt
+
+# 物理常数
+D = 0.1  # 热扩散率 (m^2/day)
+A = 10.0  # 年平均地表温度 (°C)
+B = 12.0  # 地表温度振幅 (°C)
+TAU = 365.0  # 年周期 (days)
+T_BOTTOM = 11.0  # 20米深处温度 (°C)
+T_INITIAL = 10.0  # 初始温度 (°C)
+DEPTH_MAX = 20.0  # 最大深度 (m)
+
+
+def solve_earth_crust_diffusion(h=1.0, a=1.0, M=21, N=366, years=10):
+    """
+    求解地壳热扩散方程 (显式差分格式)
+
+    参数:
+        h (float): 空间步长 (m)
+        a (float): 时间步长比例因子
+        M (int): 深度方向网格点数
+        N (int): 时间步数
+        years (int): 总模拟年数
+
+    返回:
+        tuple: (depth_array, temperature_matrix)
+            - depth_array (ndarray): 深度数组 (m)
+            - temperature_matrix (ndarray): 温度矩阵 [time, depth]
+    """
+    # 计算稳定性参数
+    r = h * D / a ** 2
+    print(f"稳定性参数 r = {r:.4f}")
+
+    # 初始化温度矩阵
+    T = np.zeros((M, N)) + T_INITIAL
+    T[-1, :] = T_BOTTOM  # 底部边界条件
+
+    # 时间步进循环
+    for year in range(years):
+        for j in range(1, N - 1):
+            # 地表边界条件
+            T[0, j] = A + B * np.sin(2 * np.pi * j / TAU)
+
+            # 显式差分格式
+            T[1:-1, j + 1] = T[1:-1, j] + r * (T[2:, j] + T[:-2, j] - 2 * T[1:-1, j])
+
+    # 创建深度数组
+    depth = np.arange(0, DEPTH_MAX + h, h)
+
+    return depth, T
+
+
+def plot_seasonal_profiles(depth, temperature, seasons=[90, 180, 270, 365]):
+    """
+    绘制季节性温度轮廓
+
+    参数:
+        depth (ndarray): 深度数组
+        temperature (ndarray): 温度矩阵
+        seasons (list): 季节时间点 (days)
+    """
+    plt.figure(figsize=(10, 8))
+
+    # 绘制各季节的温度轮廓
+    for i, day in enumerate(seasons):
+        plt.plot(depth, temperature[:, day],
+                 label=f'Day {day}', linewidth=2)
+    plt.xlabel('Depth (m)')
+    plt.ylabel('Temperature (°C)')
+    plt.title('Seasonal Temperature Profiles')
+    plt.grid(True)
+    plt.legend()
+
+    plt.show()
+
+
+if __name__ == "__main__":
+    # 运行模拟
+    depth, T = solve_earth_crust_diffusion()
+
+    # 绘制季节性温度轮廓
+    plot_seasonal_profiles(depth, T)
 ```
 
